fixed error with getting controller index

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,7 +88,7 @@ LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
 
 [RootWindow]
 ScreenPosition=X=-8.000 Y=6.000
@@ -1448,6 +1448,7 @@ PanelWidget.Behavior=True
 PanelWidget.Performance=True
 PanelWidget.Render Transform=True
 PanelWidget.Navigation=True
+EndGameScreen_C.Default=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup;
@@ -1472,7 +1473,7 @@ RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_Mat.T_Brick_Clay_N
 RecentlyPlaced=/Game/Textures/Materials/T_Env_Ice_Ground_Rock_2_N.T_Env_Ice_Ground_Rock_2_N;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1527,6 +1528,7 @@ LastLogListing=LightingResults
 /Game/Blueprints/IceAmmoPickup.IceAmmoPickup=1
 /Game/Sounds/Music/endgameMusic.endgameMusic=1
 /Game/Sounds/SoundEffects/normal-hitnormal.normal-hitnormal=1
+/Game/UI/EndGameScreen.EndGameScreen=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1632,7 +1634,7 @@ ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.Re
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object=
+Object="Object.PinOptions.PinNames" 
 FoodFightersChar_C=
 Character=
 Pawn=
@@ -1657,10 +1659,10 @@ Border=
 EditableTextBox=Object.Style.WidgetStyle
 ProgressBar=Object.Style.WidgetStyle
 Image=Object.Appearance.Brush
-K2Node_SwitchString=Object.PinOptions.PinNames
-K2Node_Switch=Object.PinOptions.PinNames
-K2Node=Object.PinOptions.PinNames
-EdGraphNode=Object.PinOptions.PinNames
+K2Node_SwitchString="Object.PinOptions.PinNames" 
+K2Node_Switch="Object.PinOptions.PinNames" 
+K2Node="Object.PinOptions.PinNames" 
+EdGraphNode="Object.PinOptions.PinNames" 
 StaticMesh=
 StaticMeshActor=Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
