fixed some HUD issues with P3 and P4

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,17 +81,16 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/UI
 
 [EditorStartup]
 LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=-8.000 Y=6.000
+ScreenPosition=X=4.000 Y=24.000
 WindowSize=X=1536.000 Y=864.000
 InitiallyMaximized=True
 
@@ -109,7 +108,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
+UNR=../../../../../../Users/denve/Documents/Github/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/denve/Documents/Github/CGT445/External Assets/Table export
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -1479,7 +1478,7 @@ LastLogListing=PIE
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
 /Game/Mannequin/Character/Mesh/SK_Mannequin_PhysicsAsset.SK_Mannequin_PhysicsAsset=0
 /Game/Blueprints/FoodProjectile.FoodProjectile=0
-/Game/Blueprints/FoodFightersChar.FoodFightersChar=1
+/Game/Blueprints/FoodFightersChar.FoodFightersChar=0
 /Game/Blueprints/FireProjectile.FireProjectile=1
 /Game/Blueprints/IceProjectile.IceProjectile=1
 /Game/Blueprints/UI/HUD.HUD=1
@@ -1634,7 +1633,7 @@ ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.Re
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object="Object.PinOptions.PinNames" 
+Object=
 FoodFightersChar_C=
 Character=
 Pawn=
@@ -1656,7 +1655,7 @@ ProjectileMovementComponent=
 MovementComponent=
 ExperimentalProjectile_C=
 Border=
-EditableTextBox=Object.Style.WidgetStyle
+EditableTextBox="Object.Style.WidgetStyle" 
 ProgressBar=Object.Style.WidgetStyle
 Image=Object.Appearance.Brush
 K2Node_SwitchString="Object.PinOptions.PinNames" 
