added basic ammo spawning functionality to the gamemode blueprint. simply add the basic TargetPoints actor to the map and the system should spawn an ammo pickup every 3 seconds at one of the target points on the map. oddly doesn't work when just playing the map straight away. start the game from the main menu in order to see functionality.

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -39,7 +39,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@SCOTT-PC
 LastExecutedLaunchName=SCOTT-PC
-NewWindowPosition=(X=123,Y=55)
+NewWindowPosition=(X=315,Y=163)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -81,17 +81,18 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/UI
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 
 [EditorStartup]
 LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
 
 [RootWindow]
 ScreenPosition=X=4.000 Y=24.000
-WindowSize=X=1536.000 Y=864.000
+WindowSize=X=1546.000 Y=874.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -579,8 +580,8 @@ FontEditor.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Main
-MRUItem1=/Game/Maps/Grand_Cafeteria
-MRUItem2=/Game/Maps/BarebonesCafeteria
+MRUItem1=/Game/Maps/BarebonesCafeteria
+MRUItem2=/Game/Maps/Grand_Cafeteria
 MRUItem3=/Game/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem5=/Game/Blueprints/Main
@@ -1448,8 +1449,34 @@ PanelWidget.Performance=True
 PanelWidget.Render Transform=True
 PanelWidget.Navigation=True
 EndGameScreen_C.Default=True
+TargetPoint.TransformCommon=True
+TargetPoint.Sprite=True
+TargetPoint.Rendering=True
+TargetPoint.Tags=True
+TargetPoint.Input=True
+TargetPoint.Actor=True
+BarebonesCafeteria_C.Tick=True
+BarebonesCafeteria_C.Replication=True
+BarebonesCafeteria_C.Input=True
+BarebonesCafeteria_C.Actor=True
+REINST_FoodFightersChar_C_324.None=True
+REINST_FoodFightersChar_C_324.Tick=True
+REINST_FoodFightersChar_C_324.Character=True
+REINST_FoodFightersChar_C_324.Camera=True
+REINST_FoodFightersChar_C_324.Pawn=True
+REINST_FoodFightersChar_C_324.Rendering=True
+REINST_FoodFightersChar_C_324.Replication=True
+REINST_FoodFightersChar_C_324.Input=True
+REINST_FoodFightersChar_C_324.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
+RecentlyPlaced=/Game/Meshs/food/donut.donut;
+RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_Base_Color.Apple_Base_Color;
+RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/AppleMat.AppleMat;
+RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_00.Apple_00;
+RecentlyPlaced=/Game/Meshs/food/Pumpkin_Mat.Pumpkin_Mat;
+RecentlyPlaced=/Game/Meshs/food/Pumpkin.Pumpkin;
 RecentlyPlaced=/Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup;
 RecentlyPlaced=/Game/Blueprints/IceAmmoPickup.IceAmmoPickup;
 RecentlyPlaced=/Game/Blueprints/FireAmmoPickup.FireAmmoPickup;
@@ -1463,13 +1490,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Fire_Tiled_D.T_Fire_Tiled_D;
 RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Grime_D.T_Concrete_Grime_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_CobbleStone_Pebble_D.T_CobbleStone_Pebble_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_D.T_Brick_Clay_New_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_M.T_Brick_Clay_New_M;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_Old_N.T_Brick_Clay_Old_N;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Cut_Stone_D.T_Brick_Cut_Stone_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Brick_Clay_New_Mat.T_Brick_Clay_New_Mat;
-RecentlyPlaced=/Game/Textures/Materials/T_Env_Ice_Ground_Rock_2_N.T_Env_Ice_Ground_Rock_2_N;
 
 [MessageLog]
 LastLogListing=PIE
@@ -1528,6 +1548,10 @@ LastLogListing=PIE
 /Game/Sounds/Music/endgameMusic.endgameMusic=1
 /Game/Sounds/SoundEffects/normal-hitnormal.normal-hitnormal=1
 /Game/UI/EndGameScreen.EndGameScreen=0
+/Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
+/Game/Blueprints/FoodFightersGI.FoodFightersGI=1
+/Game/Meshs/food/Apple_00_OBJ/AppleMat.AppleMat=1
+/Game/Meshs/food/Apple_00_OBJ/Apple_00.Apple_00=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1655,15 +1679,15 @@ ProjectileMovementComponent=
 MovementComponent=
 ExperimentalProjectile_C=
 Border=
-EditableTextBox="Object.Style.WidgetStyle" 
+EditableTextBox=Object.Style.WidgetStyle
 ProgressBar=Object.Style.WidgetStyle
 Image=Object.Appearance.Brush
-K2Node_SwitchString="Object.PinOptions.PinNames" 
-K2Node_Switch="Object.PinOptions.PinNames" 
-K2Node="Object.PinOptions.PinNames" 
-EdGraphNode="Object.PinOptions.PinNames" 
+K2Node_SwitchString=Object.PinOptions.PinNames
+K2Node_Switch=
+K2Node=
+EdGraphNode=
 StaticMesh=
-StaticMeshActor=Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags
+StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
@@ -1675,6 +1699,8 @@ IceAmmoPickup_C=Object.Actor.Tags
 Font=Object.Font
 PauseMenu_C=
 EndGameScreen_C=
+FoodFightersGM_C=
+GameMode=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
