--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,19 +81,18 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent
 
 [EditorStartup]
-LastLevel=/Game/Maps/Main
+LastLevel=/Game/Maps/Grand_Cafeteria
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
 
 [RootWindow]
-ScreenPosition=X=4.000 Y=24.000
-WindowSize=X=1546.000 Y=874.000
-InitiallyMaximized=True
+ScreenPosition=X=277.000 Y=73.000
+WindowSize=X=1556.000 Y=884.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -109,7 +108,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/denve/Documents/Github/CGT445/Game/Content/Maps
+UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/denve/Documents/Github/CGT445/External Assets/Table export
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -579,9 +578,9 @@ FontEditor.TimeStamp=2017.01.14-16.43.39
 FontEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Main
-MRUItem1=/Game/Maps/BarebonesCafeteria
-MRUItem2=/Game/Maps/Grand_Cafeteria
+MRUItem0=/Game/Maps/Grand_Cafeteria
+MRUItem1=/Game/Maps/Main
+MRUItem2=/Game/Maps/BarebonesCafeteria
 MRUItem3=/Game/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 MRUItem5=/Game/Blueprints/Main
@@ -1468,8 +1467,15 @@ REINST_FoodFightersChar_C_324.Rendering=True
 REINST_FoodFightersChar_C_324.Replication=True
 REINST_FoodFightersChar_C_324.Input=True
 REINST_FoodFightersChar_C_324.Actor=True
+Blueprint_CeilingLight_C.TransformCommon=True
+Blueprint_CeilingLight_C.Light=True
+Blueprint_CeilingLight_C.Rendering=True
+Blueprint_CeilingLight_C.Input=True
+Blueprint_CeilingLight_C.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/Meshs/food/donut.donut;
 RecentlyPlaced=/Game/Meshs/food/Apple_00_OBJ/Apple_Base_Color.Apple_Base_Color;
@@ -1488,11 +1494,9 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Worn.M_Wood_Fl
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Wood_Floor_Walnut_Polished;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Walnut.M_Wood_Walnut;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Fire_Tiled_D.T_Fire_Tiled_D;
-RecentlyPlaced=/Game/StarterContent/Textures/T_Concrete_Grime_D.T_Concrete_Grime_D;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
