only the first player doesnt get the proper rotation set for some reason. chalking it up to UE4 version being behind the times

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -84,13 +84,12 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent
 
 [EditorStartup]
-LastLevel=/Game/Maps/Grand_Cafeteria
+LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersPlayerStart.FoodFightersPlayerStart
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
@@ -581,8 +580,8 @@ FontEditor.TimeStamp=2017.01.14-16.43.39
 FontEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/Maps/Grand_Cafeteria
-MRUItem1=/Game/Maps/Main
+MRUItem0=/Game/Maps/Main
+MRUItem1=/Game/Maps/Grand_Cafeteria
 MRUItem2=/Game/Maps/BarebonesCafeteria
 MRUItem3=/Game/Maps/FirstPersonExampleMap
 MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
@@ -1504,6 +1503,15 @@ REINST_FoodFightersChar_C_119.Replication=True
 REINST_FoodFightersChar_C_119.Input=True
 REINST_FoodFightersChar_C_119.Actor=True
 FoodFightersPlayerStart_C.Default=True
+REINST_FoodFightersChar_C_109.None=True
+REINST_FoodFightersChar_C_109.Tick=True
+REINST_FoodFightersChar_C_109.Character=True
+REINST_FoodFightersChar_C_109.Camera=True
+REINST_FoodFightersChar_C_109.Pawn=True
+REINST_FoodFightersChar_C_109.Rendering=True
+REINST_FoodFightersChar_C_109.Replication=True
+REINST_FoodFightersChar_C_109.Input=True
+REINST_FoodFightersChar_C_109.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1691,7 +1699,7 @@ FoodFightersPlayerStart_C.Actor=True
 [DetailPropertyExpansion]
 FoodProjectile_C=
 SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-ShapeComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -1731,7 +1739,7 @@ Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 StandardAmmoPickup_C=Object.Actor.Tags
 StaticMeshComponent=
-CapsuleComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]" 
+CapsuleComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
 FireAmmoPickup_C=Object.Actor.Tags
 IceAmmoPickup_C=Object.Actor.Tags
 Font=Object.Font
