added a buffer between starting the game in the main menu and being able to actually play to give players time to adjust to surroundings. implemented in the game mode so play the game from the main menu to observe behavior

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -90,6 +90,7 @@ LastLevel=/Game/Maps/Main
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
+OpenAssetsAtExit=/Game/UI/StartBuffer.StartBuffer
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
@@ -1512,6 +1513,29 @@ REINST_FoodFightersChar_C_109.Rendering=True
 REINST_FoodFightersChar_C_109.Replication=True
 REINST_FoodFightersChar_C_109.Input=True
 REINST_FoodFightersChar_C_109.Actor=True
+Grand_Cafeteria_C.Tick=True
+Grand_Cafeteria_C.Replication=True
+Grand_Cafeteria_C.Input=True
+Grand_Cafeteria_C.Actor=True
+MovieSceneColorSection.Section=True
+StartBuffer_C.Appearance=True
+StartBuffer_C.Interaction=True
+StartBuffer_C.Input=True
+StartBuffer_C.Designer=True
+StartBuffer_C.Layout=True
+StartBuffer_C.Behavior=True
+StartBuffer_C.Performance=True
+StartBuffer_C.Render Transform=True
+StartBuffer_C.Navigation=True
+REINST_FoodFightersChar_C_281.None=True
+REINST_FoodFightersChar_C_281.Tick=True
+REINST_FoodFightersChar_C_281.Character=True
+REINST_FoodFightersChar_C_281.Camera=True
+REINST_FoodFightersChar_C_281.Pawn=True
+REINST_FoodFightersChar_C_281.Rendering=True
+REINST_FoodFightersChar_C_281.Replication=True
+REINST_FoodFightersChar_C_281.Input=True
+REINST_FoodFightersChar_C_281.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1597,6 +1621,7 @@ LastLogListing=PIE
 /Game/Meshs/food/Apple_00_OBJ/AppleMat.AppleMat=1
 /Game/Meshs/food/Apple_00_OBJ/Apple_00.Apple_00=1
 /Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight=1
+/Game/Maps/Grand_Cafeteria.Grand_Cafeteria:PersistentLevel.Grand_Cafeteria=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
