added sounds for game start buffer as well as main menu BG music and pause menu bg music. start buffers sound only works when you launch a standalone game client. this is a known bug and is due to us using 4.12 instead of most recent version of UE4

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -40,6 +40,7 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@SCOTT-PC
 LastExecutedLaunchName=SCOTT-PC
 NewWindowPosition=(X=315,Y=163)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -90,7 +91,12 @@ LastLevel=/Game/Maps/Main
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
+OpenAssetsAtExit=/Game/UI/PauseMenu.PauseMenu
 OpenAssetsAtExit=/Game/UI/StartBuffer.StartBuffer
+OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Sounds/Music/PauseMusicLoop.PauseMusicLoop
+OpenAssetsAtExit=/Game/Sounds/Music/MainMenuMusicLoop.MainMenuMusicLoop
+OpenAssetsAtExit=/Game/UI/EndGameScreen.EndGameScreen
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
@@ -1536,6 +1542,13 @@ REINST_FoodFightersChar_C_281.Rendering=True
 REINST_FoodFightersChar_C_281.Replication=True
 REINST_FoodFightersChar_C_281.Input=True
 REINST_FoodFightersChar_C_281.Actor=True
+SoundCue.Attenuation=True
+SoundCue.Sound=True
+SoundCue.Debug=True
+SoundCue.Concurrency=True
+SoundCue.Info=True
+SoundNodeLooping.Looping=True
+SoundNodeWavePlayer.WavePlayer=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1613,7 +1626,7 @@ LastLogListing=PIE
 /Game/Blueprints/StandardAmmoPickup.StandardAmmoPickup=1
 /Game/Blueprints/FireAmmoPickup.FireAmmoPickup=1
 /Game/Blueprints/IceAmmoPickup.IceAmmoPickup=1
-/Game/Sounds/Music/endgameMusic.endgameMusic=1
+/Game/Sounds/Music/endgameMusic.endgameMusic=0
 /Game/Sounds/SoundEffects/normal-hitnormal.normal-hitnormal=1
 /Game/UI/EndGameScreen.EndGameScreen=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
@@ -1622,6 +1635,8 @@ LastLogListing=PIE
 /Game/Meshs/food/Apple_00_OBJ/Apple_00.Apple_00=1
 /Game/StarterContent/Blueprints/Blueprint_CeilingLight.Blueprint_CeilingLight=1
 /Game/Maps/Grand_Cafeteria.Grand_Cafeteria:PersistentLevel.Grand_Cafeteria=0
+/Game/Sounds/Music/Bensound_-_Elevator_Bossa_Nova.Bensound_-_Elevator_Bossa_Nova=0
+/Game/Sounds/SoundEffects/CS-GO_Ready.CS-GO_Ready=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1826,7 +1841,7 @@ bAutoScrollEnabled=False
 bShowCurveEditor=False
 bShowCurveEditorCurveToolTips=True
 bLinkCurveEditorTimeRange=False
-bLooping=True
+bLooping=False
 bKeepCursorInPlayRange=True
 bKeepPlayRangeInSectionBounds=True
 ZeroPadFrames=0
