added ingame music that silences on pause and comes back on resume

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -40,7 +40,6 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@SCOTT-PC
 LastExecutedLaunchName=SCOTT-PC
 NewWindowPosition=(X=315,Y=163)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMiddleMousePan=False
@@ -98,6 +97,7 @@ OpenAssetsAtExit=/Game/Sounds/Music/PauseMusicLoop.PauseMusicLoop
 OpenAssetsAtExit=/Game/Sounds/Music/MainMenuMusicLoop.MainMenuMusicLoop
 OpenAssetsAtExit=/Game/UI/EndGameScreen.EndGameScreen
 OpenAssetsAtExit=/Game/UI/YouWin.YouWin
+OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
@@ -1559,6 +1559,12 @@ YouWin_C.Behavior=True
 YouWin_C.Performance=True
 YouWin_C.Render Transform=True
 YouWin_C.Navigation=True
+ScaleBox.Layout=True
+ScaleBox.Stretching=True
+ScaleBox.Behavior=True
+ScaleBox.Performance=True
+ScaleBox.Render Transform=True
+ScaleBox.Navigation=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1649,6 +1655,7 @@ LastLogListing=PIE
 /Game/Sounds/SoundEffects/CS-GO_Ready.CS-GO_Ready=0
 /Game/Sounds/SoundEffects/scream05.scream05=0
 /Game/UI/YouWin.YouWin=0
+/Game/Sounds/Music/Pit_People_OST_Music_-_It_s_Us___Main_Theme__by_Patric_Catani.Pit_People_OST_Music_-_It_s_Us___Main_Theme__by_Patric_Catani=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
@@ -1755,10 +1762,10 @@ ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.Re
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object="Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered" 
-FoodFightersChar_C="Object." 
-Character="Object." 
-Pawn="Object." 
+Object="Object.Appearance.WidgetStyle" 
+FoodFightersChar_C=
+Character=
+Pawn=
 REINST_FoodFightersChar_C_205=Object.Actor.Tags
 SkeletalMeshComponent=
 SkinnedMeshComponent=
@@ -1768,18 +1775,18 @@ FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
-Widget="Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered" 
-Visual="Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered" 
-Button="Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered" 
-ContentWidget="Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered" 
-PanelWidget="Object.Appearance.WidgetStyle" "Object.Appearance.WidgetStyle.Hovered" 
+Widget="Object.Appearance.WidgetStyle" 
+Visual="Object.Appearance.WidgetStyle" 
+Button="Object.Appearance.WidgetStyle" 
+ContentWidget="Object.Appearance.WidgetStyle" 
+PanelWidget="Object.Appearance.WidgetStyle" 
 ProjectileMovementComponent=
 MovementComponent=
 ExperimentalProjectile_C=
 Border=
 EditableTextBox=Object.Style.WidgetStyle
 ProgressBar=Object.Style.WidgetStyle
-Image=Object.Appearance.Brush
+Image=
 K2Node_SwitchString=Object.PinOptions.PinNames
 K2Node_Switch=
 K2Node=
