trying to open project with newest version of UE4 to see if it will solve problems. committing so i have something to roll back to increase it gets FUBAR

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,13 +81,13 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent
+ContentBrowserTab1.SelectedPaths=/Game/Sounds/Music
 
 [EditorStartup]
 LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
 OpenAssetsAtExit=/Game/UI/PauseMenu.PauseMenu
@@ -98,11 +98,12 @@ OpenAssetsAtExit=/Game/Sounds/Music/MainMenuMusicLoop.MainMenuMusicLoop
 OpenAssetsAtExit=/Game/UI/EndGameScreen.EndGameScreen
 OpenAssetsAtExit=/Game/UI/YouWin.YouWin
 OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
+OpenAssetsAtExit=/Game/Sounds/Music/InGameMusicLoop.InGameMusicLoop
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
-WindowSize=X=1556.000 Y=884.000
-InitiallyMaximized=False
+WindowSize=X=1566.000 Y=894.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -118,11 +119,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/Alex/Desktop/Gith/CGT445/Game/Content/Maps
+UNR=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/Maps
 BRUSH=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 FBX=../../../../../../Users/denve/Documents/Github/CGT445/External Assets/Table export
 FBXAnim=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
-GenericImport=../../../../../../Users/Scott/Documents/GitHub/CGT445/External Assets/Fonts/bubble & soap.ttf
+GenericImport=../../../../../../Users/Scott/Documents/GitHub/CGT445/External Assets/Sounds/Music/Pit People OST Music - It's Us! (Main Theme) by Patric Catani.wav
 GenericExport=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericOpen=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
 GenericSave=../../../../../../Users/Scott/Documents/GitHub/CGT445/Game/Content/
@@ -586,6 +587,14 @@ TextureEditor.TimeStamp=2017.01.14-16.46.30
 TextureEditor.LastCompileMethod=Unknown
 FontEditor.TimeStamp=2017.01.14-16.43.39
 FontEditor.LastCompileMethod=Unknown
+SoundCueEditor.TimeStamp=2017.01.14-16.46.04
+SoundCueEditor.LastCompileMethod=Unknown
+LauncherServices.TimeStamp=2017.01.14-16.44.29
+LauncherServices.LastCompileMethod=Unknown
+PackageDependencyInfo.TimeStamp=2017.01.14-16.45.13
+PackageDependencyInfo.LastCompileMethod=Unknown
+BlueprintNativeCodeGen.TimeStamp=2017.01.14-16.42.37
+BlueprintNativeCodeGen.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Main
@@ -1762,7 +1771,7 @@ ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.Re
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
-Object="Object.Appearance.WidgetStyle" 
+Object=
 FoodFightersChar_C=
 Character=
 Pawn=
@@ -1775,8 +1784,8 @@ FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
 MainMenu_C=
 UserWidget=
-Widget="Object.Appearance.WidgetStyle" 
-Visual="Object.Appearance.WidgetStyle" 
+Widget=
+Visual=
 Button="Object.Appearance.WidgetStyle" 
 ContentWidget="Object.Appearance.WidgetStyle" 
 PanelWidget="Object.Appearance.WidgetStyle" 
