hit sounds and hud flash on hit now work for all players

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -87,18 +87,13 @@ ContentBrowserTab1.SelectedPaths=/Game/Sounds/Music
 LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
-OpenAssetsAtExit=/Game/UI/PauseMenu.PauseMenu
-OpenAssetsAtExit=/Game/UI/StartBuffer.StartBuffer
-OpenAssetsAtExit=/Game/UI/MainMenu.MainMenu
-OpenAssetsAtExit=/Game/Sounds/Music/PauseMusicLoop.PauseMusicLoop
-OpenAssetsAtExit=/Game/Sounds/Music/MainMenuMusicLoop.MainMenuMusicLoop
-OpenAssetsAtExit=/Game/UI/EndGameScreen.EndGameScreen
-OpenAssetsAtExit=/Game/UI/YouWin.YouWin
+OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
 OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
-OpenAssetsAtExit=/Game/Sounds/Music/InGameMusicLoop.InGameMusicLoop
+OpenAssetsAtExit=/Game/UI/HUDP2.HUDP2
+OpenAssetsAtExit=/Game/UI/HUDP3.HUDP3
+OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
@@ -1574,6 +1569,42 @@ ScaleBox.Behavior=True
 ScaleBox.Performance=True
 ScaleBox.Render Transform=True
 ScaleBox.Navigation=True
+REINST_FoodFightersChar_C_158.None=True
+REINST_FoodFightersChar_C_158.Tick=True
+REINST_FoodFightersChar_C_158.Character=True
+REINST_FoodFightersChar_C_158.Camera=True
+REINST_FoodFightersChar_C_158.Pawn=True
+REINST_FoodFightersChar_C_158.Rendering=True
+REINST_FoodFightersChar_C_158.Replication=True
+REINST_FoodFightersChar_C_158.Input=True
+REINST_FoodFightersChar_C_158.Actor=True
+REINST_FoodFightersChar_C_201.None=True
+REINST_FoodFightersChar_C_201.Tick=True
+REINST_FoodFightersChar_C_201.Character=True
+REINST_FoodFightersChar_C_201.Camera=True
+REINST_FoodFightersChar_C_201.Pawn=True
+REINST_FoodFightersChar_C_201.Rendering=True
+REINST_FoodFightersChar_C_201.Replication=True
+REINST_FoodFightersChar_C_201.Input=True
+REINST_FoodFightersChar_C_201.Actor=True
+REINST_FoodFightersChar_C_212.None=True
+REINST_FoodFightersChar_C_212.Tick=True
+REINST_FoodFightersChar_C_212.Character=True
+REINST_FoodFightersChar_C_212.Camera=True
+REINST_FoodFightersChar_C_212.Pawn=True
+REINST_FoodFightersChar_C_212.Rendering=True
+REINST_FoodFightersChar_C_212.Replication=True
+REINST_FoodFightersChar_C_212.Input=True
+REINST_FoodFightersChar_C_212.Actor=True
+REINST_FoodFightersChar_C_225.None=True
+REINST_FoodFightersChar_C_225.Tick=True
+REINST_FoodFightersChar_C_225.Character=True
+REINST_FoodFightersChar_C_225.Camera=True
+REINST_FoodFightersChar_C_225.Pawn=True
+REINST_FoodFightersChar_C_225.Rendering=True
+REINST_FoodFightersChar_C_225.Replication=True
+REINST_FoodFightersChar_C_225.Input=True
+REINST_FoodFightersChar_C_225.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1786,9 +1817,9 @@ MainMenu_C=
 UserWidget=
 Widget=
 Visual=
-Button="Object.Appearance.WidgetStyle" 
-ContentWidget="Object.Appearance.WidgetStyle" 
-PanelWidget="Object.Appearance.WidgetStyle" 
+Button=Object.Appearance.WidgetStyle
+ContentWidget=
+PanelWidget=
 ProjectileMovementComponent=
 MovementComponent=
 ExperimentalProjectile_C=
@@ -1801,7 +1832,7 @@ K2Node_Switch=
 K2Node=
 EdGraphNode=
 StaticMesh=
-StaticMeshActor="Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags" 
+StaticMeshActor=Object.StaticMeshActor.StaticMeshComponent.Object.Tags.ComponentTags
 SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.OcclusionTint
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
