second player now spawns as a pumpkin however 3rd and 4th player are still bananas, more food meshes required

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1700,7 +1700,7 @@ LastLogListing=PIE
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
-SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 
 [WidgetTemplatesExpanded]
