third player is now a carrot

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,6 +94,8 @@ OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
 OpenAssetsAtExit=/Game/UI/HUDP2.HUDP2
 OpenAssetsAtExit=/Game/UI/HUDP3.HUDP3
 OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
+OpenAssetsAtExit=/Game/Meshs/food/carrot_Cylinder01_Skeleton.carrot_Cylinder01_Skeleton
+OpenAssetsAtExit=/Game/Meshs/food/carrot.carrot_Cylinder01
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
@@ -1605,6 +1607,8 @@ REINST_FoodFightersChar_C_225.Rendering=True
 REINST_FoodFightersChar_C_225.Replication=True
 REINST_FoodFightersChar_C_225.Input=True
 REINST_FoodFightersChar_C_225.Actor=True
+FbxImportUI.Miscellaneous=True
+SkeletalMesh.SkeletalMesh=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1629,7 +1633,7 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Floor_Walnut_Polished.M_Woo
 RecentlyPlaced=/Game/StarterContent/Materials/M_Wood_Pine.M_Wood_Pine;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/E_NumberOfPlayers.E_NumberOfPlayers=0
@@ -1696,11 +1700,13 @@ LastLogListing=PIE
 /Game/Sounds/SoundEffects/scream05.scream05=0
 /Game/UI/YouWin.YouWin=0
 /Game/Sounds/Music/Pit_People_OST_Music_-_It_s_Us___Main_Theme__by_Patric_Catani.Pit_People_OST_Music_-_It_s_Us___Main_Theme__by_Patric_Catani=0
+/Game/Meshs/food/carrot_Foliage01_Skeleton.carrot_Foliage01_Skeleton=0
+/Game/Meshs/food/carrot.carrot_Foliage01=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
-SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,
+SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 
 [WidgetTemplatesExpanded]
@@ -1799,17 +1805,17 @@ FoodFightersPlayerStart_C.Actor=True
 FoodProjectile_C=
 SphereComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
 ShapeComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
-Object=
+PrimitiveComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+SceneComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+ActorComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+Object="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
 FoodFightersChar_C=
 Character=
 Pawn=
 REINST_FoodFightersChar_C_205=Object.Actor.Tags
-SkeletalMeshComponent=
-SkinnedMeshComponent=
-MeshComponent=
+SkeletalMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+SkinnedMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
+MeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
 REINST_FoodFightersChar_C_262=Object.Actor.Tags
 FireProjectile_C=Object.Actor.Tags
 IceProjectile_C=Object.Actor.Tags
@@ -1837,7 +1843,7 @@ SkyLight=Object.Light.LightComponent.Object.DistanceFieldAmbientOcclusion.Occlus
 Info=
 Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 StandardAmmoPickup_C=Object.Actor.Tags
-StaticMeshComponent=
+StaticMeshComponent="Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]" 
 CapsuleComponent=Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]
 FireAmmoPickup_C=Object.Actor.Tags
 IceAmmoPickup_C=Object.Actor.Tags
