fourth player is now a tomato. yes neither the pumpkin nor the tomato fit in the respective hit boxes. no i do not care

--- a/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Game/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -88,14 +88,7 @@ LastLevel=/Game/Maps/Main
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/FoodFightersGM.FoodFightersGM
 OpenAssetsAtExit=/Game/Blueprints/FoodFightersChar.FoodFightersChar
-OpenAssetsAtExit=/Game/UI/HUDP1.HUDP1
-OpenAssetsAtExit=/Game/UI/HUDP2.HUDP2
-OpenAssetsAtExit=/Game/UI/HUDP3.HUDP3
-OpenAssetsAtExit=/Game/UI/HUDP4.HUDP4
-OpenAssetsAtExit=/Game/Meshs/food/carrot_Cylinder01_Skeleton.carrot_Cylinder01_Skeleton
-OpenAssetsAtExit=/Game/Meshs/food/carrot.carrot_Cylinder01
 
 [RootWindow]
 ScreenPosition=X=277.000 Y=73.000
@@ -1702,11 +1695,14 @@ LastLogListing=FBXImport
 /Game/Sounds/Music/Pit_People_OST_Music_-_It_s_Us___Main_Theme__by_Patric_Catani.Pit_People_OST_Music_-_It_s_Us___Main_Theme__by_Patric_Catani=0
 /Game/Meshs/food/carrot_Foliage01_Skeleton.carrot_Foliage01_Skeleton=0
 /Game/Meshs/food/carrot.carrot_Foliage01=0
+/Game/Meshs/food/carrot_Cylinder01_Skeleton.carrot_Cylinder01_Skeleton=1
+/Game/Meshs/food/carrot.carrot_Cylinder01=1
+/Game/Meshs/food/broccoli.broccoli=0
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 InputSettings=InputSettings.Bindings.ActionMappings,
-SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
+SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 
 [WidgetTemplatesExpanded]
